--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,54 @@
+@book{bandura_self-efficacy:_1997,
+	address = {New York},
+	edition = {1st edition},
+	title = {Self-{Efficacy}: {The} {Exercise} of {Control}},
+	isbn = {978-0-7167-2850-4},
+	shorttitle = {Self-{Efficacy}},
+	abstract = {Albert Bandura's highly anticipated examination of his vastly influential work on self-efficacy is now available. The result of over 20 years of research by this renowned psychologist, the book articulates comprehensively Bandura's theory that believing one can achieve what one sets out to do results in a healthier, more effective, and generally more successful life.},
+	language = {English},
+	publisher = {Worth Publishers},
+	author = {Bandura, Albert},
+	month = feb,
+	year = {1997}
+}
+
+@book{duckworth_grit:_2016,
+	address = {New York},
+	edition = {1 edition},
+	title = {Grit: {The} {Power} of {Passion} and {Perseverance}},
+	isbn = {978-1-5011-1110-5},
+	shorttitle = {Grit},
+	abstract = {In this instant New York Times bestseller pioneering psychologist Angela Duckworth shows anyone striving to succeed be it parents students educators athletes or business people that the secret to outstanding achievement is not talent but a special blend of passion and persistence she calls grit Drawing on her own powerful story as the daughter of a scientist who frequently noted her lack of genius Duckworth now a celebrated researcher and professor describes her early eye opening stints in teaching business consulting and neuroscience which led to the hypothesis that what really drives success is not genius but a unique combination of passion and long term perseverance In Grit she takes readers into the field to visit cadets struggling through their first days at West Point teachers working in some of the toughest schools and young finalists in the National Spelling Bee She also mines fascinating insights from history and shows what can be gleaned from modern experiments in peak performance Finally she shares what she s learned from interviewing dozens of high achievers from JP Morgan CEO Jamie Dimon to New Yorker cartoon editor Bob Mankoff to Seattle Seahawks Coach Pete Carroll Among Grit s most valuable insights Why any effort you make ultimately counts twice toward your goal How grit can be learned regardless of I Q or circumstances How lifelong interest is triggered How much of optimal practice is suffering and how much ecstasy Which is better for your child a warm embrace or high standards The magic of the Hard Thing Rule Winningly personal insightful and even life changing Grit is a book about what goes through your head when you fall down and how that not talent or luck makes all the difference In this must read book for anyone striving to succeed pioneering psychologist Angela Duckworth shows parents educators athletes students and business people both seasoned and new that the secret to outstanding achievement is n},
+	language = {English},
+	publisher = {Scribner},
+	author = {Duckworth, Angela},
+	month = may,
+	year = {2016}
+}
+
+@misc{12-item_Grit_Scale,
+	title = {12-item {Grit} {Scale}.pdf},
+	url = {https://www.dropbox.com/s/2pzjz1v0dadmr8r/12-item%20Grit%20Scale.pdf?dl=0},
+	abstract = {Shared with Dropbox},
+	language = {en},
+	urldate = {2018-02-07},
+	journal = {Dropbox},
+	file = {Snapshot:files/16/12-item Grit Scale.html:text/html}
+}
+
+@book{drucker_practice_1954,
+	address = {New York},
+	title = {The practice of management},
+	isbn = {978-0-06-091316-8 978-0-88730-613-6 978-0-330-02031-2 978-0-06-011095-6},
+	abstract = {"This classic volume achieves a remarkable width of appeal without sacrificing scientific accuracy or depth of analysis. It is a valuable contribution to the study of business efficiency which should be read by anyone wanting information about the developments and place of management, and it is as relevant today as when it was first written. This is a practical book, written out of many years of experience in working with managements of small, medium and large corporations. It aims to be a management guide, enabling readers to examine their own work and performance, to diagnose their weaknesses and to improve their own effectiveness as well as the results of the enterprise they are responsible for."--Publisher's description.},
+	language = {English},
+	publisher = {Harper \& Row},
+	author = {Drucker, Peter F},
+	year = {1954},
+	note = {OCLC: 230717}
+}
+
+
 @book{saxenian1994,
   title = {Regional {{Advantage}}: {{Culture}} and {{Competition}} in {{Silicon Valley}} and {{Route}} 128},
   isbn = {978-0-674-75339-6},
