--- a/01.Rmd
+++ b/01.Rmd
@@ -1,4 +1,4 @@
-## Self-Learning and Efficacy while Controlling for Personality Differences {#GritDistribution}
+# Self-Learning and Efficacy while Controlling for Personality Differences {#GritDistribution}
 
 #### Keywords {-}
 
