--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "W201 Portfolio"
 author: "Tom Hunter"
-date: "MIDS Fall 2017"
+date: "MIDS Spring 2018"
 site: bookdown::bookdown_site
 documentclass: book
 bibliography: references.bib
