--- a/02.Rmd
+++ b/02.Rmd
@@ -22,6 +22,12 @@ RANK | NAME | YEAR | DAMAGE (U.S.)
 
 5 | IRMA (FL) | 2017 | 50,000,000,000
 
+| Tables        | Are           | Cool  |
+| ------------- |:-------------:| -----:|
+| col 3 is      | right-aligned | $1600 |
+| col 2 is      | centered      |   $12 |
+| zebra stripes | are neat      |    $1 |
+
 Homes uncovered by flood insurance, yet impacted by severe property damage creates an interesting, but ethically vague opportunity. Since much of the economic damage can be attributed to property damage, there are often property owners without the financial means to rebuild, or pay upkeep due to existing financial obligations, causing a spike in forecloses, sales of property below the market value pre-hurricane. 
 
 This essentially creates two meaningful opportunities:
