--- a/references.bib
+++ b/references.bib
@@ -86,3 +86,13 @@
 	journal = {Fortune},
 	file = {Snapshot:files/29/climate-change-insurance-industry.html:text/html}
 }
+
+@misc{national_oceanic_and_atmospheric_administration_costliest_2018,
+	title = {Costliest {U}.{S}. tropical cyclones tables updated},
+	url = {https://www.nhc.noaa.gov/news/UpdatedCostliest.pdf},
+	language = {English},
+	publisher = {NOAA},
+	author = {National Oceanic {and} Atmospheric Administration},
+	month = jan,
+	year = {2018}
+}
