--- a/02.Rmd
+++ b/02.Rmd
@@ -1,5 +1,5 @@
 
-# Disaster Centric Real Estate Development Valuations {#Disaster-Properties}
+# Disaster Centric Real Estate Valuation (D-CREV) {#Disaster-Properties}
 
 ![alt text](https://na.rdcpix.com/1058620997/7167b6e2bb9248cd79999e1295cf149ew-c0xd-w685_h860_q80.jpg)
 
